Fixed predicate.tex for name changes and additional S H cons value.

--- a/proof/cases/progress/predicate.tex
+++ b/proof/cases/progress/predicate.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{S}=p\;e_{S}^{1}$
+$e_{S}=p$ $e_{S}^{1}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $p\;e_{S}^{1}\rightarrow p\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $p\;e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{1}$ is a value otherwise.  If $p=\mathtt{nat?}$ then $p\;e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\overline{n}$ and $p\;e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{list?}$ then $p\;e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}\in\lbrace\mathtt{cons}\;e_{S}^{3}\;e_{S}^{4},\mathtt{nil}\rbrace$ and $p\;e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{proc?}$ then $p\;e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\lambda x.e_{S}^{5}$ and $p\;e_{S}^{1}\rightarrow\overline{1}$ otherwise.
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $p$ $e_{S}^{1}\rightarrow p$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $p$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{1}$ is a value otherwise.  If $p=\mathtt{num?}$ then $p$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\overline{n}$ and $p$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{list?}$ then $p$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}\in\lbrace\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{4},\mathtt{nil},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ and $p$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{fun?}$ then $p$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\lambda x.e_{S}^{5}$ and $p$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.
 \end{case}
