--- a/proof/cases/progress/as.tex
+++ b/proof/cases/progress/as.tex
@@ -11,7 +11,7 @@ If $e_{S}^{1}=\overline{n}$ then $^{N}AS$ $\overline{n}\rightarrow\overline{n}$.
 \begin{subcase}
 $T=T_{1}\rightarrow T_{2}$
 
-If $e_{S}^{1}=\lambda x_{1}.e_{S}^{2}$ then $^{T_{1}\rightarrow T_{2}}AS$ $(\lambda x_{1}.e_{S}^{2})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}AS$ $((\lambda x_{1}.e_{S}^{2})$ $(SA^{T_{1}}$ $x_{2})))$.  $^{T_{1}\rightarrow T_{2}}AS$ $e_{S}^{1}\rightarrow{^{T_{1}\rightarrow T_{2}}A}S$ $(\mathtt{wrong}$ \emph{``Not a procedure"}$)$ otherwise.
+If $e_{S}^{1}=\lambda x_{1}.e_{S}^{2}$ then $^{T_{1}\rightarrow T_{2}}AS$ $(\lambda x_{1}.e_{S}^{2})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}AS$ $((\lambda x_{1}.e_{S}^{2})$ $(SA^{T_{1}}$ $x_{2})))$.  $^{T_{1}\rightarrow T_{2}}AS$ $e_{S}^{1}\rightarrow{^{T_{1}\rightarrow T_{2}}A}S$ $(\mathtt{wrong}$ \emph{``Not a function"}$)$ otherwise.
 \end{subcase}
 \begin{subcase}
 $T=\forall X.T_{1}$
