--- a/thesis.tex
+++ b/thesis.tex
@@ -61,6 +61,7 @@
     \hbox to \hsize{\hfil\box\@tempboxa\hfil}
   \fi
   \vskip\belowcaptionskip}
+%\let\@currsize\normalsize
 \makeatother
 
 \begin{document}
