Fixed ordering of fig labels and captions.

--- a/model/hce.tex
+++ b/model/hce.tex
@@ -1,8 +1,6 @@
 \begin{figure}[p]
-\label{hce}
-\caption{Haskell core expressions}
 %\onehalfspacing
-\begin{center}
+\centering
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $v_{H}$ $\vert$ $x$ $\vert$ $e_{H}$ $e_{H}$ $\vert$ $e_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $e_{H}$ \\
 && $\vert$ $\mathtt{ifnil}$ $e_{H}$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{fix}$ $e_{H}$ $\vert$ $\mathtt{wrong}^{T}$ string \\
@@ -13,5 +11,6 @@ $f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
 $E_{H}$ & $=$ & $[\,]_{H}$ $\vert$ $E_{H}$ $e_{H}$ $\vert$ $E_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{H}$ $e_{H}$ $\vert$ $o$ $v_{H}$ $E_{H}$ $\vert$ $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $E_{H}$ \\
 && $\vert$ $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{fix}$ $E_{H}$
 \end{tabular}
-\end{center}
+\caption{Haskell core expressions}
+\label{hce}
 \end{figure}
