--- a/model/hie.tex
+++ b/model/hie.tex
@@ -1,8 +1,6 @@
 \begin{figure}[p]
-\label{hie}
-\caption{Haskell interoperation expressions}
 %\onehalfspacing
-\begin{center}
+\centering
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $e_{M}$ $\vert$ $^{T}HS$ $e_{S}$ \\
 $v_{H}$ & $=$ & $\cdots$ $\vert$ $^{\forall X.T}HS$ $v_{S}$ $\vert$ $^{L}HS$ $v_{S}$ \\
@@ -10,5 +8,6 @@ $T$ & $=$ & $\cdots$ $\vert$ $L$ $\vert$ $T^{a}$ \\
 $a$ & $=$ & Type labels (a, b, \ldots) \\
 $E_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $E_{M}$ $\vert$ $^{T}HS$ $E_{S}$
 \end{tabular}
-\end{center}
+\caption{Haskell interoperation expressions}
+\label{hie}
 \end{figure}
