--- a/model/hios.tex
+++ b/model/hios.tex
@@ -1,8 +1,6 @@
 \begin{figure}[p]
-\label{hios}
-\caption{Haskell interoperation operational semantics}
 %\onehalfspacing
-\begin{center}
+\centering
 \begin{tabular}{rcl}
 % hm - number
 $\mathscr{E}[^{N}HM^{N}$ $\overline{n}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
@@ -50,5 +48,6 @@ $\mathscr{E}[^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})]_{H}$ & $\rightarrow$ & $\mathscr
 $\mathscr{E}[^{T^{a}}HS$ $v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ \\
 && ($v_{S}\neq SH^{T^{a}}$ $e_{H}$)
 \end{tabular}
-\end{center}
+\caption{Haskell interoperation operational semantics}
+\label{hios}
 \end{figure}
