--- a/model/mios.tex
+++ b/model/mios.tex
@@ -1,8 +1,6 @@
 \begin{figure}[p]
-\label{mios}
-\caption{ML interoperation operational semantics}
 %\onehalfspacing
-\begin{center}
+\centering
 \begin{tabular}{rcl}
 % mh - number
 $\mathscr{E}[^{N}MH^{N}$ $\overline{n}]_{M}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
@@ -49,5 +47,6 @@ $\mathscr{E}[^{T^{a}}MS$ $(SM^{T^{a}}$ $v_{M})]_{M}$ & $\rightarrow$ & $\mathscr
 $\mathscr{E}[^{T^{a}}MS$ $v_{S}]_{M}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ \\
 && ($v_{S}\neq SM^{T^{a}}$ $v_{M}$)
 \end{tabular}
-\end{center}
+\caption{ML interoperation operational semantics}
+\label{mios}
 \end{figure}
