--- a/model/mce.tex
+++ b/model/mce.tex
@@ -1,8 +1,6 @@
 \begin{figure}[p]
-\label{mce}
-\caption{ML core expressions}
 %\onehalfspacing
-\begin{center}
+\centering
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ \\
 && $\vert$ $f$ $e_{M}$ $\vert$ $\mathtt{ifnil}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string \\
@@ -14,5 +12,6 @@ $E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\ver
 && $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ \\
 && $\vert$ $\mathtt{ifnil}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$
 \end{tabular}
-\end{center}
+\caption{ML core expressions}
+\label{mce}
 \end{figure}
