--- a/model/mie.tex
+++ b/model/mie.tex
@@ -1,8 +1,6 @@
 \begin{figure}[p]
-\label{mie}
-\caption{ML interoperation expressions}
 %\onehalfspacing
-\begin{center}
+\centering
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $\cdots$ $\vert$ $^{T}MH^{T}$ $e_{H}$ $\vert$ $^{T}MS$ $e_{S}$ \\
 $v_{M}$ & $=$ & $\cdots$ $\vert$ $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $^{\forall X.T}MS$ $v_{S}$ $\vert$ $^{L}MS$ $v_{S}$ \\
@@ -10,5 +8,6 @@ $T$ & $=$ & $\cdots$ $\vert$ $L$ $\vert$ $T^{a}$ \\
 $a$ & $=$ & Type labels (a, b, \ldots) \\
 $E_{M}$ & $=$ & $\cdots$ $\vert$ $^{T}MH^{T}$ $E_{H}$ $\vert$ $^{T}MS$ $E_{S}$
 \end{tabular}
-\end{center}
+\caption{ML interoperation expressions}
+\label{mie}
 \end{figure}
