--- a/model/sie.tex
+++ b/model/sie.tex
@@ -1,12 +1,11 @@
 \begin{figure}[p]
-\label{sie}
-\caption{Scheme interoperation expressions}
 %\onehalfspacing
-\begin{center}
+\centering
 \begin{tabular}{lcl}
 $e_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $e_{H}$ $\vert$ $SM^{T}$ $e_{M}$ \\
 $v_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $SH^{T^{a}}$ $e_{H}$ $\vert$ $SM^{T^{a}}$ $v_{M}$ \\
 $E_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $E_{H}$ $\vert$ $SM^{T}$ $E_{M}$
 \end{tabular}
-\end{center}
+\caption{Scheme interoperation expressions}
+\label{sie}
 \end{figure}
