--- a/thesis.tex
+++ b/thesis.tex
@@ -94,8 +94,7 @@ Programming language interoperation is the cooperation of software components wr
 
 I want to thank my adviser, John Clements, for helping me along the way.  I very much appreciate the time he set aside for me and his advice.
 \end{acknowledgements}
-\addcontentsline{toc}{chapter}{Contents}
-\tableofcontents
+\tableofcontents\addcontentsline{toc}{chapter}{Contents}
 \listoffigures
 
 \end{frontmatter}
